# slop-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  commit-lint.yml  coverage.yml  pre-release.yml  release-prepare.yml  release-publish.yml  release.yml
claude-plugin/: README.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/commands/: apply.md  install-hook.md  learn.md  poke.md  status.md
claude-plugin/hooks/: hooks.json  pre-commit-poke.sh  session-start-tip.sh
claude-plugin/skills/: slop.md
crates/sloppoke-cli/: Cargo.toml  build.rs
crates/sloppoke-cli/src/: api.rs  forgejo_api.rs  main.rs  news.rs  payment.rs  ssh_resolve.rs  version_check.rs
crates/sloppoke-cli/tests/: cli_smoke.rs
docs/: README.md
docs/explanation/: how-detection-works.md  llms-are-lossy-compression.md  privacy-and-identity.md  what-is-slop.md  why-pre-commit.md
docs/how-to/: gate-a-pull-request-in-ci.md  install-from-source.md  install-pre-commit-hook.md  score-a-public-repo.md  submit-feedback.md  use-claude-code-plugin.md  verify-the-binary.md
docs/reference/: catalog.md  cli.md  config.md  exit-codes.md
docs/tutorials/: 01-first-poke.md
packaging/deb/: build-deb.sh
packaging/homebrew/: slop.rb.template
skills/: slop.md
slop_0.1.0-test_amd64/DEBIAN/: control
slop_0.1.0-test_amd64/usr/share/doc/slop/: copyright
